# mallow

./: .gitignore  CHANGELOG.md  LICENSE  Package.swift  README.md  appcast.xml  build-app.sh  build.sh  index.html  make-appcast.sh  make-dmg.sh  notarize-dmg.sh  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml
AppBundle/: Info.plist  README.md  dmg-background.html  dmg-background.tiff
Sources/CInkstone/: inkstone.h  module.modulemap
Tests/MallowTests/: MallowTests.swift
docs/plans/: table-cell-padding-and-viewport-decorations.md  table-rendering-v2-hscroll.md
docs/reviews/: modifiability-review-2026-07.md
docs/security/: sparkle-update-security.md
native/: .gitignore  Package.swift  README.md  build-app.sh  build.sh
native/AppBundle/: Info.plist  README.md
src/: main.ts  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/analysis/: StatsCalculator.ts  TocExtractor.ts
src/domain/: Document.ts  EventEmitter.ts  UIState.ts
src/editor/: EditorController.ts  imageEmbed.ts  smartTypography.ts  smartTypographyRules.ts  urlPaste.ts
src/i18n/: index.ts
src/services/: FileService.ts  HtmlExporter.ts  (+7 more)
tests/: Document.test.ts  EventEmitter.test.ts  FileService.test.ts  StartupPlanner.test.ts  StatsCalculator.test.ts  TocExtractor.test.ts  UIState.test.ts  frontmatter.test.ts  htmlExport.test.ts  i18n.test.ts  imageEmbed.test.ts  smartTypography.test.ts  urlPaste.test.ts
(+117 files in other folders)
