[package]
name = "mallow"
version = "0.24.0"
description = "Mallow markdown editor"
authors = ["gurumdeva"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mallow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# 기기 OS 언어 판정용. CoreFoundation에서 직접 읽어 macOS 비현지화 앱의
# navigator.language 함정을 피한다(메뉴 + 프런트엔드가 동일 판정을 공유).
sys-locale = "0.3"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-clipboard-manager = "2"

# WKWebView 배경을 직접 투명화하기 위해 macOS에서만 objc2 사용.
# (다크 모드 cold-start 시 WKWebView 자체가 흰색으로 1프레임 그려져 발생하는
#  flash를 막기 위해 drawsBackground=NO via KVC를 호출한다. lib.rs 참고.)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSValue"] }
